Updated to include SVG and make use of the rank in sizing.

--- a/ww.html
+++ b/ww.html
@@ -2,32 +2,49 @@
 <meta charset="utf-8">
 <style>
 
-  .chart div {
+.chart rect {
+  fill: steelblue;
+}
+
+.chart text {
+  fill: white;
   font: 10px sans-serif;
-  background-color: steelblue;
-  text-align: right;
-  padding: 3px;
-  margin: 1px;
-  color: white;
+  text-anchor: end;
 }
 
 </style>
-<div class="chart"></div>
+<svg class="chart"></svg>
 <script src="//d3js.org/d3.v3.min.js"></script>
 <script>
 
   d3.json("data/characters.json", function(data) {
     console.log(data);
+    var colours = {"hero":"red","villain":"black","side-kick":"green","leader":"purple"};
+    var width = 420, barHeight = 20;
     var x = d3.scale.linear()
       .domain([0, 7])
       .range([0, 420]);
 
-    d3.select(".chart")
-      .selectAll("div")
-      .data(data)
-      .enter().append("div")
-      .style("width", function(d) { return x(+d["rank"]) + "px"; })
-      .text(function(d) { return d.name + x(+d["rank"]); });
+    var chart = d3.select(".chart")
+    .attr("width", width)
+    .attr("height", barHeight * data.length);
+
+    var bar = chart.selectAll("g")
+      .data(data).enter().append("g").attr("transform", function(d, i) { return "translate(0," + i * barHeight + ")"; });
+
+    bar.append("rect")
+      .attr("width", function(d) { return x(+d["rank"]); })
+      .attr("height", barHeight - 1);
+
+    bar.append("text")
+      .attr("x", function(d) { return x(+d["rank"]); })
+      .attr("y", barHeight / 2)
+      .attr("dy", ".35em")
+      .style("fill", function(d) { return colours[d["status"]]; })
+      .text(function(d) { return d.name; });
+
   });
+
+
 
 </script>
